--- a/fullcalendar-scheduler-6.1.8/examples/timeline-full-height.html
+++ b/fullcalendar-scheduler-6.1.8/examples/timeline-full-height.html
@@ -49,7 +49,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     },
     expandRows: true,
-    resourceAreaHeaderContent: 'Rooms',
+    resourceAreaHeaderContent: 'Contracts',
     resources: [
       { id: 'a', title: 'Auditorium A' },
       { id: 'b', title: 'Auditorium B', eventColor: 'green' },
