--- a/fullcalendar-scheduler-6.1.8/examples/timeline-full-height.html
+++ b/fullcalendar-scheduler-6.1.8/examples/timeline-full-height.html
@@ -51,15 +51,15 @@ document.addEventListener('DOMContentLoaded', function() {
     expandRows: true,
     resourceAreaHeaderContent: 'Contracts',
     resources: [
-      { id: 'a', title: 'Auditorium A' },
-      { id: 'b', title: 'Auditorium B', eventColor: 'green' },
-      { id: 'c', title: 'Auditorium C', eventColor: 'orange' },
-      { id: 'd', title: 'Auditorium D', children: [
-        { id: 'd1', title: 'Room D1' },
-        { id: 'd2', title: 'Room D2' }
+      { id: 'a', title: 'Contract1' },
+      { id: 'b', title: 'Contract2', eventColor: 'green' },
+      { id: 'c', title: 'Contract3', eventColor: 'orange' },
+      { id: 'd', title: 'Contract4', children: [
+        { id: 'd1', title: 'Contract5' },
+        { id: 'd2', title: 'Contract6' }
       ] },
-      { id: 'e', title: 'Auditorium E' },
-      { id: 'f', title: 'Auditorium F', eventColor: 'red' },
+      { id: 'e', title: 'Contract7' },
+      { id: 'f', title: 'Contract8', eventColor: 'red' },
       // { id: 'g', title: 'Auditorium G' },
       // { id: 'h', title: 'Auditorium H' },
       // { id: 'i', title: 'Auditorium I' },
