--- a/fullcalendar-scheduler-6.1.8/examples/timeline.html
+++ b/fullcalendar-scheduler-6.1.8/examples/timeline.html
@@ -9,6 +9,7 @@
     var calendarEl = document.getElementById('calendar');
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
+      schedulerLicenseKey: 'CC-Attribution-NonCommercial-NoDerivatives',
       initialDate: '2023-01-07',
       editable: true, // enable draggable events
       selectable: true,
