--- a/template.html
+++ b/template.html
@@ -57,3 +57,106 @@
     }
   }
 </style>
+
+
+
+
+
+
+
+
+"<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+<div class='container_splash' style='background-image: linear-gradient(to bottom right, black, black, rgb(12, 5, 66), blue);font-family: Roboto; color: white; line-height: 1.5;width: 100%;height:800px;'>
+    <div class='header' style='overflow: hidden;background: transparent;padding: 20px 10px;float: right;'>
+        <a style='float: left;color: white;text-align: center;padding: 12px;text-decoration: none;font-size: 18px;line-height: 25px;border-radius: 4px;padding-right: 40px;'>OPEN APP</a>
+         <a style='float: left;color: white;text-align: center;padding: 12px;text-decoration: none;font-size: 18px;line-height: 25px;border-radius: 4px;padding-right: 40px;'>FAQs</a>
+        <!--<a style='float: left;color: white;text-align: center;padding: 12px;text-decoration: none;font-size: 18px;line-height: 25px;border-radius: 4px;padding-right: 40px;'>CONTACT</a>-->
+
+    </div><br><br><br>
+
+    <div id='content' width='25%' style='padding-left: 50px;'>
+        <p style='font-size: 72px; letter-spacing: 5px;'><b>Commander</b><br>RAHs</p>
+        <p style='font-size: 30px;'>Commander Action Group</p><br>
+        <p width='25%'>
+            <u>Contact</u><br/>
+            Phone: (305) 437-3170 <br/>
+            Email: nicole.y.agila.ctr@mail.mil
+            <br/><br/>
+            Phone: (305) 761-0408 <br/>
+            Email: peter.barcelo.civ@mail.mil
+            <br/><br/>
+            Phone: (305) 437-1362 <br/>
+            Email: rafael.e.beltran.mil@mail.mil
+ 
+        </p><br>
+        <!--<a style='text-decoration: underline;text-underline-position: under;font-size: 18px;color: dodgerblue;'>Learn More ></a>-->
+    </div><br><br>
+
+</div>"
+
+
+
+
+
+
+
+//revision
+"<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+<div class='container_splash' style='background-image: linear-gradient(to bottom right, black, black, rgb(12, 5, 66), blue); font-family: Roboto; color: white; line-height: 1.5; width: 100%; height: 100vh;'>
+    <div class='header' style='overflow: hidden; background: transparent; padding: 2vh 5vw; display: flex; justify-content: flex-end; align-items: center;'>
+        <a style='color: white; text-align: center; padding: 1.5vh 2vw; text-decoration: none; font-size: 1.2rem; line-height: 1.5rem; border-radius: 4px; margin-right: 2vw;'>OPEN APP</a>
+        <a style='color: white; text-align: center; padding: 1.5vh 2vw; text-decoration: none; font-size: 1.2rem; line-height: 1.5rem; border-radius: 4px;'>FAQs</a>
+    </div>
+
+    <div id='content' style='padding-left: 5vw; margin-top: 5vh;'>
+        <p style='font-size: 6vw; letter-spacing: 0.3vw;'><b>Commander</b><br>RAHs</p>
+        <p style='font-size: 3vw;'>Commander Action Group</p><br>
+        <p>
+            <u>Contact</u><br/>
+            Phone: (305) 437-3170 <br/>
+            Email: nicole.y.agila.ctr@mail.mil
+            <br/><br/>
+            Phone: (305) 761-0408 <br/>
+            Email: peter.barcelo.civ@mail.mil
+            <br/><br/>
+            Phone: (305) 437-1362 <br/>
+            Email: rafael.e.beltran.mil@mail.mil
+        </p>
+    </div>
+</div>
+
+<style>
+  @media (max-width: 768px) {
+    .container_splash {
+      height: 100vh;
+    }
+
+    .header a {
+      font-size: 1rem;
+      padding: 1vh 1.5vw;
+    }
+
+    #content p:first-of-type {
+      font-size: 8vw;
+    }
+
+    #content p:nth-of-type(2) {
+      font-size: 4vw;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .header a {
+      font-size: 0.9rem;
+      padding: 1vh 1vw;
+    }
+
+    #content p:first-of-type {
+      font-size: 10vw;
+    }
+
+    #content p:nth-of-type(2) {
+      font-size: 5vw;
+    }
+  }
+</style>"
