--- a/template.html
+++ b/template.html
@@ -160,3 +160,66 @@
     }
   }
 </style>"
+
+
+
+//revision2
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<div class="container_splash" style="background-image: linear-gradient(to bottom right, black, black, rgb(12, 5, 66), blue); font-family: Roboto; color: white; line-height: 1.5; width: 100%; min-height: 100vh; padding-bottom: 2vh;">
+    <div class="header" style="overflow: hidden; background: transparent; padding: 2vh 5vw; display: flex; justify-content: flex-end; align-items: center;">
+        <a style="color: white; text-align: center; padding: 1.5vh 2vw; text-decoration: none; font-size: 1.2rem; line-height: 1.5rem; border-radius: 4px; margin-right: 2vw;">OPEN APP</a>
+        <a style="color: white; text-align: center; padding: 1.5vh 2vw; text-decoration: none; font-size: 1.2rem; line-height: 1.5rem; border-radius: 4px;">FAQs</a>
+    </div>
+
+    <div id="content" style="padding-left: 5vw; margin-top: 5vh;">
+        <p style="font-size: 6vw; letter-spacing: 0.3vw;"><b>Commander</b><br>RAHs</p>
+        <p style="font-size: 3vw;">Commander Action Group</p><br>
+        <p style="white-space: pre-wrap;">
+            <u>Contact</u><br/>
+            Phone: (305) 437-3170 <br/>
+            Email: <a href="mailto:nicole.y.agila.ctr@mail.mil" style="color: white;">nicole.y.agila.ctr@mail.mil</a>
+            <br/><br/>
+            Phone: (305) 761-0408 <br/>
+            Email: <a href="mailto:peter.barcelo.civ@mail.mil" style="color: white;">peter.barcelo.civ@mail.mil</a>
+            <br/><br/>
+            Phone: (305) 437-1362 <br/>
+            Email: <a href="mailto:rafael.e.beltran.mil@mail.mil" style="color: white;">rafael.e.beltran.mil@mail.mil</a>
+        </p>
+    </div>
+</div>
+
+<style>
+  @media (max-width: 768px) {
+    .container_splash {
+      min-height: 100vh;
+    }
+
+    .header a {
+      font-size: 1rem;
+      padding: 1vh 1.5vw;
+    }
+
+    #content p:first-of-type {
+      font-size: 8vw;
+    }
+
+    #content p:nth-of-type(2) {
+      font-size: 4vw;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .header a {
+      font-size: 0.9rem;
+      padding: 1vh 1vw;
+    }
+
+    #content p:first-of-type {
+      font-size: 10vw;
+    }
+
+    #content p:nth-of-type(2) {
+      font-size: 5vw;
+    }
+  }
+</style>
